# florist

./: Cargo.toml  README.md  justfile
calculating-expected-offspring/: Cargo.toml
calculating-expected-offspring/src/: lib.rs
calculating-protein-mass/: Cargo.toml
calculating-protein-mass/src/: lib.rs
complementing-a-strand-of-dna/: Cargo.toml
complementing-a-strand-of-dna/src/: lib.rs
computing-gc-content/: Cargo.toml
computing-gc-content/src/: lib.rs
consensus-and-profile/: Cargo.toml
consensus-and-profile/src/: lib.rs
counting-dna-nucleotides/: Cargo.toml
counting-dna-nucleotides/src/: lib.rs
counting-point-mutations/: Cargo.toml
counting-point-mutations/src/: lib.rs
enumerating-gene-orders/: Cargo.toml
enumerating-gene-orders/src/: lib.rs
enumerating-k-mers-lexicographically/: Cargo.toml
enumerating-k-mers-lexicographically/src/: lib.rs
enumerating-oriented-gene-orderings/: Cargo.toml
enumerating-oriented-gene-orderings/src/: lib.rs
finding-a-motif-in-dna/: Cargo.toml
finding-a-motif-in-dna/src/: lib.rs
florist-cli/: Cargo.toml
florist-cli/src/: cli.rs  main.rs
florist-core/: Cargo.toml
florist-core/src/: amino.rs  codon.rs  lib.rs  population.rs  sequence.rs
florist-fasta/: Cargo.toml
florist-fasta/src/: lib.rs
florist-inputs/: Cargo.toml
florist-inputs/src/: lib.rs  num_list.rs  sequence.rs
florist-plumbing/: Cargo.toml
florist-plumbing/src/: lib.rs
florist-solver/: Cargo.toml
florist-solver/benches/: bench_main.rs
florist-solver/solutions/: consensus_and_profile.txt  enumerating_oriented_gene_orderings.txt  locating_restriction_sites.txt  open_reading_frames.txt  overlap_graphs.txt  translating_rna_into_protein.txt
florist-solver/src/: lib.rs
independent-alleles/: Cargo.toml
independent-alleles/src/: lib.rs
inferring-mrna-from-protein/: Cargo.toml
inferring-mrna-from-protein/src/: lib.rs
inputs/: rosalind_cons.txt  rosalind_dna.txt  rosalind_gc.txt  rosalind_grph.txt  rosalind_hamm.txt  rosalind_iev.txt  rosalind_iprb.txt  rosalind_mrna.txt  rosalind_orf.txt  rosalind_prot.txt  rosalind_prtm.txt  rosalind_revc.txt  rosalind_revp.txt  rosalind_rna.txt  rosalind_splc.txt  rosalind_subs.txt  rosalind_tran.txt
locating-restriction-sites/: Cargo.toml
locating-restriction-sites/src/: lib.rs
mendels-first-law/: Cargo.toml
mendels-first-law/src/: lib.rs
mortal-fibonacci-rabbits/: Cargo.toml
mortal-fibonacci-rabbits/src/: lib.rs
open-reading-frames/: Cargo.toml
open-reading-frames/src/: lib.rs
overlap-graphs/: Cargo.toml
overlap-graphs/src/: lib.rs
rabbits-and-recurrence-relations/: Cargo.toml
rabbits-and-recurrence-relations/src/: lib.rs
rna-splicing/: Cargo.toml
rna-splicing/src/: lib.rs
template/: Cargo.toml
template/src/: lib.rs
transcribing-dna-into-rna/: Cargo.toml
transcribing-dna-into-rna/src/: lib.rs
transitions-and-transversions/: Cargo.toml
transitions-and-transversions/src/: lib.rs
translating-rna-into-protein/: Cargo.toml
translating-rna-into-protein/src/: lib.rs
