[workspace]

# members are listed with core libs first, then problem order
members = [
    "florist-core",
    "florist-plumbing",
    "florist-solver",
    "counting-dna-nucleotides",
    "transcribing-dna-into-rna",
    "complementing-a-strand-of-dna",
    "rabbits-and-recurrence-relations",
]

[profile.release]
lto = true
