[package]
name = "calculating-expected-offspring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
florist-core = { path = "../florist-core" }
florist-inputs = { path = "../florist-inputs" }
florist-plumbing = { path = "../florist-plumbing" }
