[package]
name = "florist-inputs"
version = "0.1.0"
edition = "2021"
description = "Misc inputs that don't fit in with the actual core functionality."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
florist-core = { path = "../florist-core" }
thiserror = { workspace = true }
