[package]
name = "florist-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
florist-plumbing = { path = "../florist-plumbing" }
counting-dna-nucleotides = { path = "../counting-dna-nucleotides" }
transcribing-dna-into-rna = { path = "../transcribing-dna-into-rna" }
complementing-a-strand-of-dna = { path = "../complementing-a-strand-of-dna" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_main"
harness = false
