[package]
name = "florist-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
florist-plumbing = { path = "../florist-plumbing" }
counting-dna-nucleotides = { path = "../counting-dna-nucleotides" }
transcribing-dna-into-rna = { path = "../transcribing-dna-into-rna" }
complementing-a-strand-of-dna = { path = "../complementing-a-strand-of-dna" }
rabbits-and-recurrence-relations = { path = "../rabbits-and-recurrence-relations" }
computing-gc-content = { path = "../computing-gc-content" }
counting-point-mutations = { path = "../counting-point-mutations" }
enumerating-gene-orders = { path = "../enumerating-gene-orders" }
enumerating-k-mers-lexicographically = { path = "../enumerating-k-mers-lexicographically" }
mendels-first-law = { path = "../mendels-first-law" }
translating-rna-into-protein = { path = "../translating-rna-into-protein" }
calculating-protein-mass = { path = "../calculating-protein-mass" }
finding-a-motif-in-dna = { path = "../finding-a-motif-in-dna" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_main"
harness = false
